Prevent floating elements overlap by adding clear: both;
The social-icons in the header may overlap with the title of the posts' h1 tag. This patch ensures that the overlap does not happen.

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -25,6 +25,7 @@
 */
 
 .header {
+  clear: both;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   margin-bottom: 4rem;
